# JointFish

./: .gitmodules  Cargo.toml
src/: allele.rs  bcf.rs  bed.rs  configs.rs  main.rs  partition.rs
