[package]
name = "jointfish"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crayfish = { path = "./crayfish/crayfish", features=["net-mpi"]} 
rust-htslib = "0.36.0"
# structopt = "0.3.21"
clap = "2.33"
bio = "0.34"
